--- a/waybar/style.css
+++ b/waybar/style.css
@@ -20,9 +20,14 @@ window#waybar {
 #workspaces button {
     padding: 0 13px;
     background: transparent;
-    border-bottom: 2px solid rgba(255, 255, 255, 0.3);
-    color: rgba(255, 255, 255, 0.3);
+    color: rgba(250, 246, 246, 0.25);
+    border-bottom: 2px solid rgba(250, 246, 246, 0.25);
     font-size: 22px;
+}
+
+#workspaces button.visible {
+    color: rgba(250, 246, 246, 0.65);
+    border-bottom: 2px solid rgba(250, 246, 246, 0.60);
 }
 
 #workspaces button.focused {
